@@ -68,8 +68,13 @@ from itrade_wxmixin import iTradeSelectorListCtrl
 
 class iTradeQuoteSelectorListCtrlDialog(wxDialog, wxColumnSorterMixin):
     def __init__(self, parent, quote, filter = False):
-        wxDialog.__init__(self, parent, -1, message('quote_select_title'), size=(420, 420))
-        #wxPanel.__init__(self, parent, -1, style=wxWANTS_CHARS)
+        # context help
+        pre = wxPreDialog()
+        pre.SetExtraStyle(wxDIALOG_EX_CONTEXTHELP)
+        pre.Create(parent, -1, message('quote_select_title'), size=(420, 420))
+        self.PostCreate(pre)
+
+        # init
         if quote:
             self.m_isin = quote.isin()
             self.m_ticker = quote.ticker()
@@ -122,12 +127,20 @@ class iTradeQuoteSelectorListCtrlDialog(wxDialog, wxColumnSorterMixin):
         sizer.Add(self.m_list, 0, wxALIGN_CENTRE|wxALL, 5)
 
         box = wxBoxSizer(wxHORIZONTAL)
+
+        # context help
+        if wxPlatform != "__WXMSW__":
+            btn = wxContextHelpButton(self)
+            box.Add(btn, 0, wxALIGN_CENTRE|wxALL, 5)
+
+        # OK
         btn = wxButton(self, wxID_OK, message('ok'))
         btn.SetDefault()
         btn.SetHelpText(message('ok_desc'))
         box.Add(btn, 0, wxALIGN_CENTRE|wxALL, 5)
         EVT_BUTTON(self, wxID_OK, self.OnValid)
 
+        # CANCEL
         btn = wxButton(self, wxID_CANCEL, message('cancel'))
         btn.SetHelpText(message('cancel_desc'))
         box.Add(btn, 0, wxALIGN_CENTRE|wxALL, 5)
